--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,8 @@
     <p>Welcome to the chat app</p>
 
     <script src="/socket.io/socket.io.js" type="text/javascript"></script>
-    <script type="text/javascript">
-      var socket = io();
+    <script src="./js/index.js" type="text/javascript">
 
-      socket.on('connect', () => {
-        console.log('Connected to server');
-      });
-
-      socket.on('disconnect', () => {
-        console.log('Disconnected from server');
-      })
     </script>
   </body>
 </html>
